--- a/Maket1/index.html
+++ b/Maket1/index.html
@@ -1,16 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <h1 class="my-4 text-center">Hello!</h1>
-
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <section class="d-flex justify-center my-5 w-50 mx-auto">
+      <div class="card-item">
+        <img src="/assets/photo/Head-section1.png" class="card-icons">
+        <h3 class="my-4">Peace of Mind</h3>
+        <p>So it really behaves like neither. <br>
+          Now we have given up. </p>
+      </div>
+      <div class="card-item">
+        <img src="/assets/photo/Head-section2.png" class="card-icons">
+        <h3 class="my-4">Set For Life</h3>
+        <p>They were used to create the <br> 
+          machines that launched </p>
+      </div>
+      <div class="card-item">
+        <img src="/assets/photo/Head-section3.png" class="card-icons">
+        <h3 class="my-4">100% Satisfaction</h3>
+        <p>So it really behaves like neither. <br>
+          Now we have given up. </p>
+      </div>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </body>
 </html>
