--- a/Maket1/index.html
+++ b/Maket1/index.html
@@ -28,6 +28,35 @@
           Now we have given up. </p>
       </div>
     </section>
+    <h1 class="text-center">Industry</h1>
+    <p class="text-center">Problems trying to resolve the conflict between <br>
+      the two major realms of Classical physics: Newtonian mechanics </p>
+    <section class="d-flex my-5 w-50 mx-auto gaps">
+      <div class="w-50 border rounded card">
+        <img src="/assets/photo/section-photo1.png" alt="" class=" card-prfile">
+        <p>Slate helps you see how <br>
+          many more days you need <br>
+          to work to reach your financial <br>
+          goal for the month and year.</p>
+        <img src="/assets/photo/stars.png" alt="" class="stars">
+      </div>
+      <div class="w-50 border rounded card">
+        <img src="/assets/photo/section-photo2.png" alt="" class=" card-prfile">
+        <p>Slate helps you see how <br>
+          many more days you need <br>
+          to work to reach your financial <br>
+          goal for the month and year.</p>
+        <img src="/assets/photo/stars.png" alt="" class="stars">
+      </div>
+      <div class="w-50 border rounded card">
+        <img src="/assets/photo/section-photo3.png" alt="" class=" card-prfile">
+        <p>Slate helps you see how <br>
+          many more days you need <br>
+          to work to reach your financial <br>
+          goal for the month and year.</p>
+        <img src="/assets/photo/stars.png" alt="" class="stars">
+      </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
