--- a/Maket1/index.html
+++ b/Maket1/index.html
@@ -57,6 +57,18 @@
         <img src="/assets/photo/stars.png" alt="" class="stars">
       </div>
     </section>
+    <section class="w-50 mx-auto my-5 ">
+      <img src="/assets/photo/logo1.png" alt="">
+      <img src="/assets/photo/logo2.png" alt="">
+      <img src="/assets/photo/logo3.png" alt="">
+      <img src="/assets/photo/logo4.png" alt="">
+      <img src="/assets/photo/logo5.png" alt="">
+      <img src="/assets/photo/logo6.png" alt="">
+    </section>
+    <section>
+      <input type="text" id="searchInput" placeholder="Введите текст для поиска..." onkeyup="search()">
+      <div id="searchResults"></div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
